--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Подтвердите, что вы не робот</title>
+    <title>Подтвердите, что Дуб еблан</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
