--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <main>
 	  <h1> Подтвердите, что вы не робот.  </h1>
-      <a href="https://google.ru">
+      <a href="http://SonOfZurab.github.io">
         <img src="img/re.gif"  alt="HTML Academy">
       </a>
     </main>
