--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <main>
-	  <h1> Подтвердите, что вы не робот.  </h1>
+	  <h1> Подтвердите, что Дуб еблан.  </h1>
       <a href="http://SonOfZurab.github.io">
         <img src="img/re.gif"  alt="HTML Academy">
       </a>
