--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Подтвердите, что Дуб еблан</title>
+    <title>Подтвердите, что вы не робот.</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <main>
-	  <h1> Подтвердите, что Дуб еблан.  </h1>
+	  <h1> Подтвердите, что вы не робот.  </h1>
       <a href="http://SonOfZurab.github.io">
         <img src="img/re.gif"  alt="HTML Academy">
       </a>
