--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Подтвердите, что вы не робот.</title>
+    <title>Подтвердите, что дуб еблан.</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <main>
-	  <h1> Подтвердите, что вы не робот.  </h1>
-      <a href="http://SonOfZurab.github.io">
+	  <h1> Подтвердите, что дуб еблан.  </h1>
+      <a href="https://SonOfZurab.github.io">
         <img src="img/re.gif"  alt="HTML Academy">
       </a>
     </main>
