--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <main>
 	  <h1> Подтвердите, что вы не робот.  </h1>
-      <a href="https://google.ru">
-        <img src="img/re.gif"  alt="HTML Academy">
+      <a href="https://goo.gl/Mhz2fN">
+        <img src="img/re.gif">
       </a>
     </main>
 
